fix(style): buttons on toolbar's second line are not showing
in vuetify 3.5.12+, the height of VDivider in vertical mode is 100%

--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -31,7 +31,12 @@ $extra-light-primary-color: #ecf5ff;
     &__toolbar {
       .v-toolbar__content {
         flex-wrap: wrap;
+        row-gap: 4px;
         padding: 4px 12px;
+
+        .v-divider--vertical {
+          height: inherit;
+        }
       }
     }
 
